Añadido link referenciando página home e indice de proyectos para robot en Meta de head

--- a/MiSitio/porfolio/Ultimos_proyectos.html
+++ b/MiSitio/porfolio/Ultimos_proyectos.html
@@ -7,7 +7,7 @@
     <meta name="author" content="JDC" />
     <meta name="rating" content="general" />
     <meta name="robots" content="all" />
-
+	<link rel="start" title="Home" type="text/html" href="../Index.html"/>
     <link  rel="icon"   href="../fav.png" type="image/png" />
 	<title>Ultimos proyectos</title>
 
