--- a/MiSitio/Index.html
+++ b/MiSitio/Index.html
@@ -1,42 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
+  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Primer sitio completo" />
+    <meta name="description" content="Primer sitio completo" />
     <meta name="author" content="JDC" />
     <meta name="rating" content="general" />
     <meta name="robots" content="all" />
 
-	<link  rel="icon"   href="fav.png" type="image/png" />
-	<title>Mi Sitio</title>
+    <link rel="icon" href="fav.png" type="image/png" />
+    <title>Mi Sitio</title>
+  </head>
 
-</head>
+  <body>
+    <p>Página Principal</p>
 
-<body>
-	<p>Página Principal</p>
-	
-	<h1>Desarrollo de proyectos</h1>
-	
-	<p>Página principal que conecta con todas las demás. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam </p>
-	
-	<h2> <a href="porfolio/Ultimos_proyectos.html">Ultimos proyectos</a></h2>
-    
-	<p><a href="porfolio/proyecto1.html">PROYECTO 1</a>, desarrolla Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam </p>
-	
-    <p>Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam </p>
-	
-    <p>Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam </p>
-	
-    <p><a href="porfolio/proyecto2.html">PROYECTO 2</a> desarrollaLorem optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam </p>
-	
-	<p>Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam </p>
-	
-	<p>CONCLUSIONES Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam REVISAR </p>
-	
-	<!-- Añadido correo de contacto -->
-	<a href="mailto:pepe@gmail.com" title="Dirección de email para solicitar más información">Solicitar más información</a>
-    
-</body>
+    <div class="imagen logotipo">
+      <img
+        src="img/logotipo.svg"
+        alt="ipsum proyectos industriales imagen de marca"
+        title="ipsum  sproyectos industriales logotipo "
+        width="25%"
+      />
+    </div>
 
+    <h1>Desarrollo de proyectos</h1>
+
+    <p>
+      Página principal que conecta con todas las demás. Corrupti perferendis
+      vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae,
+      facere exercitationem doloremque cum dolores omnis ad delectus soluta,
+      magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing
+      elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut
+      nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus
+      velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur
+      adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio,
+      necessitatibus et magnam
+    </p>
+
+    <h2><a href="porfolio/Ultimos_proyectos.html">Ultimos proyectos</a></h2>
+
+    <p>
+      <a href="porfolio/proyecto1.html">PROYECTO 1</a>, desarrolla Lorem optio,
+      necessitatibus et magnam repudiandae, facere exercitationem doloremque cum
+      dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit
+      amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi,
+      quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus
+      sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor
+      sit amet, consectetur adipisicing elit. Corrupti perferendis vitae,
+      repellendus. Iure optio, necessitatibus et magnam
+    </p>
+
+    <p>
+      Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem
+      doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
+      ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint
+      eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id
+      accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem
+      ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis
+      vitae, repellendus. Iure optio, necessitatibus et magnam
+    </p>
+
+    <p>
+      Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem
+      doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
+      ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint
+      eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id
+      accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem
+      ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis
+      vitae, repellendus. Iure optio, necessitatibus et magnam
+    </p>
+
+    <p>
+      <a href="porfolio/proyecto2.html">PROYECTO 2</a> desarrollaLorem optio,
+      necessitatibus et magnam repudiandae, facere exercitationem doloremque cum
+      dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit
+      amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi,
+      quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus
+      sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor
+      sit amet, consectetur adipisicing elit. Corrupti perferendis vitae,
+      repellendus. Iure optio, necessitatibus et magnam
+    </p>
+
+    <p>
+      Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem
+      doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
+      ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint
+      eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id
+      accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem
+      ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis
+      vitae, repellendus. Iure optio, necessitatibus et magnam
+    </p>
+
+    <p>
+      CONCLUSIONES Lorem optio, necessitatibus et magnam repudiandae, facere
+      exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod
+      error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
+      consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos
+      maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod
+      cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti
+      perferendis vitae, repellendus. Iure optio, necessitatibus et magnam
+      REVISAR
+    </p>
+
+    <!-- Añadido correo de contacto -->
+    <a
+      href="mailto:pepe@gmail.com"
+      title="Dirección de email para solicitar más información"
+      >Solicitar más información</a
+    >
+  </body>
 </html>
