--- a/MiSitio/porfolio/Ultimos_proyectos.html
+++ b/MiSitio/porfolio/Ultimos_proyectos.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="Primer sitio completo" />
     <meta name="author" content="JDC" />
     <meta name="rating" content="general" />
+	
     <meta name="robots" content="all" />
 	<link rel="start" title="Home" type="text/html" href="../Index.html"/>
     <link  rel="icon"   href="../fav.png" type="image/png" />
@@ -14,15 +15,26 @@
 </head>
 
 <body>
-	<a href="../index.html">Volver a la página principal</a><span>&nbsp;&sol;Indice de proyectos&nbsp;</span>
-	
+<!-- cabecera -->
+	<div class="migas">
+		<a href="../index.html">Volver a la página principal</a><span>&nbsp;&sol;Indice de proyectos&nbsp;</span>
+	</div>
+
+	<div class="imagen logotipo">
+		<img
+			src="../img/logotipo.svg"
+			alt="ipsum proyectos industriales imagen de marca"
+			title="ipsum  sproyectos industriales logotipo "
+			width="25%"
+		/>
+	</div>
 	
 	<h2><a href="proyecto1.html">Proyecto 1</a></h1>
-	
+
 	<blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</blockquote>
 	
 	
-	<img src="../img/coche.jpg" alt="perro" width="400px">
+	<div class="img"><img src="../img/coche.jpg" alt="perro" width="400px"></div>
 	
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 	
@@ -32,7 +44,7 @@
 	
 	
 	
-	<img src="../img/perro.jpg" alt="perro" width="400px">
+	<div class="img"><img src="../img/perro.jpg" alt="perro" width="400px"></div>
 	
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 	
