--- a/MiSitio/porfolio/proyecto1.html
+++ b/MiSitio/porfolio/proyecto1.html
@@ -1,37 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
+  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	
+
     <meta name="description" content="Primer sitio completo" />
     <meta name="author" content="JDC" />
     <meta name="rating" content="general" />
     <meta name="robots" content="all" />
-	<link rel="start" title="Indice de proyectos" type="text/html" href="Ultimos_proyectos.html"/>
-    <link  rel="icon"   href="../fav.png" type="image/png" />
-	<title>Proyecto 1</title>
+    <link
+      rel="start"
+      title="Indice de proyectos"
+      type="text/html"
+      href="Ultimos_proyectos.html"
+    />
+    <link rel="icon" href="../fav.png" type="image/png" />
+    <title>Proyecto 1</title>
+  </head>
 
-</head>
+  <body>
+    <div class="migas">
+      <a href="../index.html">Volver a la página principal</a>
+      &nbsp;&sol;
+      <a href="Ultimos_proyectos.html"> Indice de Proyectos</a
+      >&nbsp;&sol;Proyecto1
+    </div>
 
-<body>
+    <div class="imagen logotipo">
+      <img
+        src="../img/logotipo.svg"
+        alt="ipsum proyectos industriales imagen de marca"
+        title="ipsum  sproyectos industriales logotipo "
+        width="25%"
+      />
+    </div>
 
-	<a href="../index.html">Volver a la página principal</a>
-	&nbsp;&sol;
-	<a href="Ultimos_proyectos.html"> Indice de Proyectos</a>&nbsp;&sol;Proyecto1
-	
-	<h1>Proyecto 1</h1>
-	
-	<center><img src="../img/perro.jpg" alt="perro" width="300px" id="imgperro"/></center>
-	
-	<p><cite>Fernando de Rojas</cite> <br/> <q>Proyecto de desarrollo de apps multidisciplinar</q></p>
-	
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque!</p>
-	 
-	
-	<a href="proyecto2.html">Ir a proyecto 2</a>
-	
-	<p><a href="../index.html#:~:text=CONCLUSIONES,REVISAR">Ir a conclusiones</a></p>
-</body>
+    <h1>Proyecto 1</h1>
 
+    <div class="img">
+      <img src="../img/perro.jpg" alt="perro" width="100%" id="imgperro" />
+    </div>
+
+    <p>
+      <cite>Fernando de Rojas</cite> <br />
+      <q>Proyecto de desarrollo de apps multidisciplinar</q>
+    </p>
+
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti
+      perferendis vitae, repellendus. Iure optio, necessitatibus et magnam
+      repudiandae, facere exercitationem doloremque cum dolores omnis ad
+      delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur
+      adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam,
+      blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt
+      quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet,
+      consectetur adipisicing elit. Corrupti perferendis vitae, repellendus.
+      Iure optio, necessitatibus et magnam repudiandae, facere exercitationem
+      doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
+      ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint
+      eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id
+      accusamus sed incidunt quibusdam, natus velit neque, quod cumque!
+    </p>
+
+    <a href="proyecto2.html">Ir a proyecto 2</a>
+
+    <p>
+      <a href="../index.html#:~:text=CONCLUSIONES,REVISAR">Ir a conclusiones</a>
+    </p>
+  </body>
 </html>
