--- a/MiSitio/porfolio/proyecto2.html
+++ b/MiSitio/porfolio/proyecto2.html
@@ -14,14 +14,25 @@
 </head>
 
 <body>
-	<a href="../index.html">Volver a la página principal</a>
-	&nbsp;&sol;
-	<a href="Ultimos_proyectos.html">Indice de Proyectos</a>&nbsp;&sol;Proyecto 2
+	<div class="migas">
+		<a href="../index.html">Volver a la página principal</a>
+		&nbsp;&sol;
+		<a href="Ultimos_proyectos.html">Indice de Proyectos</a>&nbsp;&sol;Proyecto 2
+	</div>
 	
+	<div class="imagen logotipo">
+		<img
+		  src="../img/logotipo.svg"
+		  alt="ipsum proyectos industriales imagen de marca"
+		  title="ipsum  sproyectos industriales logotipo "
+		  width="25%"
+		/>
+	    </div>
+
 	<h1>Proyecto 2</h1>
 	
-	<center>
-	<img src="../img/coche.jpg" alt="perro" width="300px" id="coche"/></center>
+	<div class="img">
+	<img src="../img/coche.jpg" alt="perro" width="100%" id="coche"/></div>
 	
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque!</p>
 	
