--- a/MiSitio/Index.html
+++ b/MiSitio/Index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <!-- cabecera, migas y añadido logo-->
     <p>Página Principal</p>
 
     <div class="imagen logotipo">
@@ -23,90 +24,93 @@
       />
     </div>
 
-    <h1>Desarrollo de proyectos</h1>
+    <!-- cuerpo -->
+    <main>
+      <h1>Desarrollo de proyectos</h1>
+      <p>
+        Página principal que conecta con todas las demás. Corrupti perferendis
+        vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae,
+        facere exercitationem doloremque cum dolores omnis ad delectus soluta,
+        magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing
+        elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut
+        nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus
+        velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur
+        adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio,
+        necessitatibus et magnam
+      </p>
+      <h2><a href="porfolio/Ultimos_proyectos.html">Ultimos proyectos</a></h2>
+      <p>
+        <a href="porfolio/proyecto1.html">PROYECTO 1</a>, desarrolla Lorem
+        optio, necessitatibus et magnam repudiandae, facere exercitationem
+        doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
+        ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur
+        sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores
+        cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod
+        cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et
+        magnam
+      </p>
+      <p>
+        Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem
+        doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
+        ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur
+        sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores
+        cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod
+        cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et
+        magnam
+      </p>
+      <p>
+        Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem
+        doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
+        ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur
+        sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores
+        cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod
+        cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et
+        magnam
+      </p>
+      <p>
+        <a href="porfolio/proyecto2.html">PROYECTO 2</a> desarrollaLorem optio,
+        necessitatibus et magnam repudiandae, facere exercitationem doloremque
+        cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum
+        dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint
+        eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id
+        accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem
+        ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis
+        vitae, repellendus. Iure optio, necessitatibus et magnam
+      </p>
+      <p>
+        Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem
+        doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
+        ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur
+        sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores
+        cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod
+        cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et
+        magnam
+      </p>
+      <p>
+        CONCLUSIONES Lorem optio, necessitatibus et magnam repudiandae, facere
+        exercitationem doloremque cum dolores omnis ad delectus soluta, magni
+        quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut
+        nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus
+        velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur
+        adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio,
+        necessitatibus et magnam REVISAR
+      </p>
+    </main>
 
-    <p>
-      Página principal que conecta con todas las demás. Corrupti perferendis
-      vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae,
-      facere exercitationem doloremque cum dolores omnis ad delectus soluta,
-      magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing
-      elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut
-      nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus
-      velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur
-      adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio,
-      necessitatibus et magnam
-    </p>
-
-    <h2><a href="porfolio/Ultimos_proyectos.html">Ultimos proyectos</a></h2>
-
-    <p>
-      <a href="porfolio/proyecto1.html">PROYECTO 1</a>, desarrolla Lorem optio,
-      necessitatibus et magnam repudiandae, facere exercitationem doloremque cum
-      dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit
-      amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi,
-      quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus
-      sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor
-      sit amet, consectetur adipisicing elit. Corrupti perferendis vitae,
-      repellendus. Iure optio, necessitatibus et magnam
-    </p>
-
-    <p>
-      Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem
-      doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
-      ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint
-      eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id
-      accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem
-      ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis
-      vitae, repellendus. Iure optio, necessitatibus et magnam
-    </p>
-
-    <p>
-      Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem
-      doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
-      ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint
-      eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id
-      accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem
-      ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis
-      vitae, repellendus. Iure optio, necessitatibus et magnam
-    </p>
-
-    <p>
-      <a href="porfolio/proyecto2.html">PROYECTO 2</a> desarrollaLorem optio,
-      necessitatibus et magnam repudiandae, facere exercitationem doloremque cum
-      dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit
-      amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi,
-      quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus
-      sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor
-      sit amet, consectetur adipisicing elit. Corrupti perferendis vitae,
-      repellendus. Iure optio, necessitatibus et magnam
-    </p>
-
-    <p>
-      Lorem optio, necessitatibus et magnam repudiandae, facere exercitationem
-      doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
-      ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint
-      eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id
-      accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem
-      ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis
-      vitae, repellendus. Iure optio, necessitatibus et magnam
-    </p>
-
-    <p>
-      CONCLUSIONES Lorem optio, necessitatibus et magnam repudiandae, facere
-      exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod
-      error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-      consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos
-      maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod
-      cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti
-      perferendis vitae, repellendus. Iure optio, necessitatibus et magnam
-      REVISAR
-    </p>
-
-    <!-- Añadido correo de contacto -->
-    <a
-      href="mailto:pepe@gmail.com"
-      title="Dirección de email para solicitar más información"
-      >Solicitar más información</a
-    >
+    <!-- footer -->
+    <footer>
+      <!-- Añadido correo de contacto -->
+      <a
+        href="mailto:pepe@gmail.com"
+        title="Dirección de email para solicitar más información"
+      >
+        Solicitar más información
+      </a>
+    </footer>
   </body>
 </html>
