--- a/MiSitio/porfolio/Ultimos_proyectos.html
+++ b/MiSitio/porfolio/Ultimos_proyectos.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-<!-- cabecera -->
+
+<!-- cabecera, migas ylogo-->
 	<div class="migas">
 		<a href="../index.html">Volver a la página principal</a><span>&nbsp;&sol;Indice de proyectos&nbsp;</span>
 	</div>
@@ -28,28 +29,33 @@
 			width="25%"
 		/>
 	</div>
-	
-	<h2><a href="proyecto1.html">Proyecto 1</a></h1>
 
-	<blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</blockquote>
-	
-	
-	<div class="img"><img src="../img/coche.jpg" alt="perro" width="400px"></div>
-	
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-	
-	<h2><a href="proyecto2.html">Proyecto 2</a></h2>
-	
-	<blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</blockquote>
-	
-	
-	
-	<div class="img"><img src="../img/perro.jpg" alt="perro" width="400px"></div>
-	
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-	
-	<!-- Añadidos dos correos de contacto-->
-	<a href="mailto:juanelandador@gmail.com, pepito12@gmail.com">Dos email para mas información</a>
+<!-- cuerpo, presentacion de proyecto-->
+	<main>
+		<h2><a href="proyecto1.html">Proyecto 1</a></h1>
+		<blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</blockquote>
+		
+		<!-- introducida img-->
+		<div class="img"><img src="../img/coche.jpg" alt="perro" width="400px"></div>
+		
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		
+		<h2><a href="proyecto2.html">Proyecto 2</a></h2>
+		
+		<blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</blockquote>
+		
+		
+		<!-- introducida img-->
+		<div class="img"><img src="../img/perro.jpg" alt="perro" width="400px"></div>
+		
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+		<!-- footer-->
+		<footer>
+		<!-- Añadidos dos correos de contacto-->
+		<a href="mailto:juanelandador@gmail.com, pepito12@gmail.com">Dos email para mas información</a>
+	</footer>
+	</main>
 </body>
 
 </html>
