--- a/MiSitio/porfolio/proyecto1.html
+++ b/MiSitio/porfolio/proyecto1.html
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+    <!-- cabecera, migas y añadido logo-->
     <div class="migas">
       <a href="../index.html">Volver a la página principal</a>
       &nbsp;&sol;
@@ -34,37 +35,42 @@
       />
     </div>
 
-    <h1>Proyecto 1</h1>
+    <!-- cuerpo imagen al 100%-->
+    <main>
+      <h1>Proyecto 1</h1>
+      <div class="img">
+        <img src="../img/perro.jpg" alt="perro" width="100%" id="imgperro" />
+      </div>
+      <p>
+        <cite>Fernando de Rojas</cite> <br />
+        <q>Proyecto de desarrollo de apps multidisciplinar</q>
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti
+        perferendis vitae, repellendus. Iure optio, necessitatibus et magnam
+        repudiandae, facere exercitationem doloremque cum dolores omnis ad
+        delectus soluta, magni quod error. Lorem ipsum dolor sit amet,
+        consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat
+        quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed
+        incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor
+        sit amet, consectetur adipisicing elit. Corrupti perferendis vitae,
+        repellendus. Iure optio, necessitatibus et magnam repudiandae, facere
+        exercitationem doloremque cum dolores omnis ad delectus soluta, magni
+        quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut
+        nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus
+        velit neque, quod cumque!
+      </p>
+    </main>
 
-    <div class="img">
-      <img src="../img/perro.jpg" alt="perro" width="100%" id="imgperro" />
-    </div>
-
-    <p>
-      <cite>Fernando de Rojas</cite> <br />
-      <q>Proyecto de desarrollo de apps multidisciplinar</q>
-    </p>
-
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti
-      perferendis vitae, repellendus. Iure optio, necessitatibus et magnam
-      repudiandae, facere exercitationem doloremque cum dolores omnis ad
-      delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur
-      adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam,
-      blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt
-      quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet,
-      consectetur adipisicing elit. Corrupti perferendis vitae, repellendus.
-      Iure optio, necessitatibus et magnam repudiandae, facere exercitationem
-      doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem
-      ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint
-      eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id
-      accusamus sed incidunt quibusdam, natus velit neque, quod cumque!
-    </p>
-
-    <a href="proyecto2.html">Ir a proyecto 2</a>
-
-    <p>
-      <a href="../index.html#:~:text=CONCLUSIONES,REVISAR">Ir a conclusiones</a>
-    </p>
+    <!-- footer-->
+    <footer>
+      <a href="proyecto2.html">Ir a proyecto 2</a>
+      <p>
+        <a href="../index.html#:~:text=CONCLUSIONES,REVISAR"
+          >Ir a conclusiones</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
