--- a/MiSitio/porfolio/proyecto2.html
+++ b/MiSitio/porfolio/proyecto2.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+
+<!-- cabecera, migas y logo-->	
+
 	<div class="migas">
 		<a href="../index.html">Volver a la página principal</a>
 		&nbsp;&sol;
@@ -27,17 +30,22 @@
 		  title="ipsum  sproyectos industriales logotipo "
 		  width="25%"
 		/>
-	    </div>
+	</div>
 
-	<h1>Proyecto 2</h1>
+<!-- cuerpo, añadido imagen al 100%-->	
+	<main>
 	
-	<div class="img">
-	<img src="../img/coche.jpg" alt="perro" width="100%" id="coche"/></div>
+		<h1>Proyecto 2</h1>
 	
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque!</p>
+		<div class="img">
+		<img src="../img/coche.jpg" alt="perro" width="100%" id="coche"/></div>
 	
-	<p>	<a href="proyecto1.html"/>Ir a proyecto 1</a></p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti perferendis vitae, repellendus. Iure optio, necessitatibus et magnam repudiandae, facere exercitationem doloremque cum dolores omnis ad delectus soluta, magni quod error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt consequuntur sint eligendi, quaerat quibusdam, blanditiis ut nesciunt quos maiores cum. Id accusamus sed incidunt quibusdam, natus velit neque, quod cumque!</p>
 	
+		<p>	<a href="proyecto1.html"/>Ir a proyecto 1</a></p>
+
+	</main>
+<!-- footer-->	
 	<p><a href="../index.html#:~:text=CONCLUSIONES,REVISAR">Ir a conclusiones</a></p>
 </body>
 
